--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -6,12 +6,16 @@ output: html_document
 ---
 
 ```{r setup, include=FALSE}
-source("analysis.R")
+source("../source/analysis.R")
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
 ## Covid Report
-I write a paragraph here. I will highlight that the total number of US cases is `r total_cases`, and the total number of US deaths is `r total_deaths`. I also want to show the chart:
+I write a paragraph here. I will highlight that the total number of US cases is `r get_total_cases()`. And, the total number of US deaths is `r get_total_deaths()`. 
+
+(**Note**: Why are there no commas in the *total number of US deaths* ? Can you change `analysis.R` file so that the number is commented with commas?)
+
+I also want to show the chart:
 ``` {r echo=FALSE}
 cases_plot
 ```
